[gd_scene load_steps=2 format=3 uid="uid://c6h5w2k1x3lm9"]

[ext_resource type="Script" path="res://scripts/LocalSetup.gd" id="1_bm4k2"]

[node name="LocalSetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_bm4k2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.25, 0.4, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "LOCAL MULTIPLAYER SETUP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="PlayerCountContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerCountLabel" type="Label" parent="VBoxContainer/PlayerCountContainer"]
layout_mode = 2
text = "Number of Players: 2"
custom_minimum_size = Vector2(200, 0)

[node name="PlayerCountSpinBox" type="SpinBox" parent="VBoxContainer/PlayerCountContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 0)

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="TargetModeContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TargetModeLabel" type="Label" parent="VBoxContainer/TargetModeContainer"]
layout_mode = 2
text = "Target Number Mode:"
horizontal_alignment = 1

[node name="TargetButtonContainer" type="HBoxContainer" parent="VBoxContainer/TargetModeContainer"]
layout_mode = 2

[node name="RandomButton" type="Button" parent="VBoxContainer/TargetModeContainer/TargetButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Random"

[node name="ManualButton" type="Button" parent="VBoxContainer/TargetModeContainer/TargetButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Manual"

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="TargetDigitsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TargetDigitsLabel" type="Label" parent="VBoxContainer/TargetDigitsContainer"]
layout_mode = 2
text = "Target Digits: 3"
custom_minimum_size = Vector2(200, 0)

[node name="TargetDigitsSpinBox" type="SpinBox" parent="VBoxContainer/TargetDigitsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 0)

[node name="Spacer4" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ManualTargetContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
visible = false

[node name="ManualTargetLabel" type="Label" parent="VBoxContainer/ManualTargetContainer"]
layout_mode = 2
text = "Enter Target Number:"
horizontal_alignment = 1

[node name="ManualTargetInput" type="LineEdit" parent="VBoxContainer/ManualTargetContainer"]
layout_mode = 2
placeholder_text = "Enter target number"
alignment = 1

[node name="Spacer5" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "START GAME"

[node name="Spacer6" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "BACK TO MENU"